--- a/Wwh.Mvc.Web/Wwh.Mvc.Web.csproj
+++ b/Wwh.Mvc.Web/Wwh.Mvc.Web.csproj
@@ -158,7 +158,6 @@
     <Content Include="Content\Images\btn_bg.gif" />
     <Content Include="Content\Images\default\headBg.jpg" />
     <Content Include="Content\Images\default\head_bg.gif" />
-    <Content Include="Content\Images\default\Logo.png" />
     <Content Include="Content\Images\gray\headBg.jpg" />
     <Content Include="Content\Images\gray\Logo.png" />
     <Content Include="Content\Images\icons.png" />
@@ -197,12 +196,11 @@
     <Content Include="Content\Images\icon\yes.png" />
     <Content Include="Content\Images\loading.gif" />
     <Content Include="Content\Images\loading2.gif" />
-    <Content Include="Content\Images\Logo.png" />
+    <Content Include="Content\Images\default\Logo.png" />
     <Content Include="Content\Images\nopic-t.gif" />
     <Content Include="Content\Images\nopic.gif" />
     <Content Include="Content\Images\NotPic.jpg" />
     <Content Include="Content\Images\sunny\headBg.jpg" />
-    <Content Include="Content\Images\sunny\Logo.png" />
     <Content Include="Content\Images\tools.png" />
     <Content Include="Content\Images\tools_bg.gif" />
     <Content Include="Content\Images\upfile_bg.gif" />
@@ -462,6 +460,7 @@
     <Content Include="Content\themes\gray\tree.css" />
     <Content Include="Content\themes\gray\validatebox.css" />
     <Content Include="Content\themes\gray\window.css" />
+    <Content Include="Content\home.css" />
     <Content Include="Content\themes\icon.css" />
     <Content Include="Content\themes\icons\back.png" />
     <Content Include="Content\themes\icons\blank.gif" />
