--- a/Wwh.Mvc.Web/packages.config
+++ b/Wwh.Mvc.Web/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net46" />
   <package id="EasyUI" version="1.4.5" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="EntityFramework.Extended" version="6.1.0.168" targetFramework="net46" />
   <package id="EntityFramework.zh-Hans" version="6.1.3" targetFramework="net46" />
   <package id="jQuery" version="1.11.3" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net46" />
